# netbox-mcp-server-extended

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: container-rescan.yaml  docker-publish.yml  release-extended.yml  sync-upstream.yml  test.yml
src/netbox_mcp_server/: __init__.py  config.py  netbox_client.py  netbox_write_client.py  server.py  write_tools.py
tests/: test_client_fallback.py  test_config.py  test_filter_validation.py  test_plugin_discovery.py  test_write_client.py  test_write_integration.py  test_write_tools.py
