[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/netbox_mcp_server"]

[project]
name = "netbox-mcp-server-extended"
version = "1.2.0.post1"
description = "Write-enabled fork of the NetBox MCP Server — tracks netboxlabs/netbox-mcp-server upstream"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=3.2.4,<4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]

[project.scripts]
netbox-mcp-server-extended = "netbox_mcp_server.server:main"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.12",
]

[tool.uv]
# Security floors for transitive dependencies (see issue #6 and the container
# scan). urllib3/gitpython/requests come via the python-semantic-release dev
# chain; cryptography/pyjwt/starlette are runtime transitives (via fastmcp)
# flagged HIGH by the image scan; idna/pydantic-settings were flagged by
# Dependabot. Constraints raise the minimum patched version without declaring
# them as direct dependencies.
constraint-dependencies = [
    "urllib3>=2.7.0",
    "gitpython>=3.1.50",
    "cryptography>=46.0.7",
    "requests>=2.33.0",
    "pyjwt>=2.13.0",
    "starlette>=1.3.1",
    "idna>=3.15",
    "pydantic-settings>=2.14.2",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/netbox_mcp_server/__init__.py:__version__"]
branch = "main"
upload_to_vcs_release = true
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "chore", "refactor", "test", "ci", "perf"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "LOG", # flake8-logging
    "RUF", # Ruff-specific rules
    "PT",  # Pytest style
]

ignore = [
    "E501",  # Line too long, handled by formatter
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S107"]  # Allow assert and hardcoded passwords in tests

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
